--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                        <div id="downloadModalLinks"></div>
+                    <ul class="list-group list-group-flush" id="downloadModalLinks"></ul>
                 </div>
                 <div class="modal-footer">
                     <button type="button" id="close-download-button" class="btn btn-secondary" data-dismiss="modal">Close</button>
