--- a/index.html
+++ b/index.html
@@ -318,12 +318,16 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-primary" id="exampleModalLabel">Download files of tile <span id="downloadModalTileNameTitle"></span></h5>
+                    <h5 class="modal-title text-primary" id="exampleModalLabel">
+                        Download files of <span class="text-info">Tile</span>
+                        <span class="text-info" id="downloadModalTileNameTitle"></span>
+                    </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                     </button>
                 </div>
                 <div class="modal-body">
+                    <div id="cite-md"></div>
                     <ul class="list-group list-group-flush" id="downloadModalLinks"></ul>
                 </div>
                 <div class="modal-footer">
