--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link text-warning" href="#" data-toggle="modal" data-target="#helpModal">
-                        <i class="fa fa-question"></i>Help
+                        <i class="fa fa-question"></i>About
                     </a>
                 </li>
                 <li class="nav-item">
