--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
-<!-- saved from url=(0022)http://localhost:8000/ -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
+<html lang="en">
+<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163601703-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-163601703-1');
+    </script>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
@@ -13,7 +24,7 @@
     <link rel="stylesheet" href="static/carpyncho.css">
     <link rel="shortcut icon" href="static/favicon.ico">
     <title>Carpyncho - Bulge Tiles</title>
-  </head>
+</head>
 
 <body data-gr-c-s-loaded="true">
     <!-- based on: https://bootsnipp.com/snippets/nNX3a -->
