--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="static/navbar.css">
     <link rel="stylesheet" href="static/carpyncho.css">
     <link rel="shortcut icon" href="static/favicon.ico">
-    <title>Carpyncho - Bulge Tiles</title>
+    <title>Carpyncho - VVV Datasets</title>
 </head>
 
 <body data-gr-c-s-loaded="true">
