--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body data-gr-c-s-loaded="true">
     <!-- based on: https://bootsnipp.com/snippets/nNX3a -->
     <nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Carpyncho</a>
+        <a class="navbar-brand" href="index.html">Carpyncho - VVV Datasets</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
