--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     <div id="modals">
 
         <div class="modal fade" id="downloadModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
+            <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title text-primary" id="exampleModalLabel">
