--- a/index.html
+++ b/index.html
@@ -376,6 +376,12 @@
                     </button>
                 </div>
                 <div class="modal-body md-modal" id="help-md">
+                    <div class="float-right">
+                        <a target="_new" class="btn btn-sm btn-secondary" href="https://github.com/carpyncho/carpyncho.github.io/blob/master/README.md">
+                            Open in other tab.
+                        </a>
+
+                    </div>
                     <div id="readme-md"></div>
                 </div>
                 <div class="modal-footer">
