--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                 <div class="modal-body md-modal" id="help-md">
                     <div class="float-right">
                         <a target="_new" class="btn btn-sm btn-secondary" href="https://github.com/carpyncho/carpyncho.github.io/blob/master/README.md">
-                            Open in other tab.
+                            Open in new tab.
                         </a>
 
                     </div>
