--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <link rel="stylesheet" href="static/navbar.css">
     <link rel="stylesheet" href="static/carpyncho.css">
-    <link rel="shortcut icon" href="static/favicon.ico">
+    <link rel="shortcut icon" href="static/favicon.ico?fversion=1.0">
     <title>Carpyncho - VVV Datasets</title>
 </head>
 
