--- a/index.html
+++ b/index.html
@@ -317,7 +317,9 @@
         <hr>
         <div class="footer-copyright text-center py-3">
             © 2016, 2017, 2018, 2019, 2020 Copyright:
-            <a href="https://jbcabral.org/"> Jbcabral.org</a>
+            <a href="https://jbcabral.org/" target="_new"> Jbcabral.org</a>
+            <br>
+            <a href="https://vvvsurvey.org/" target="_new">The VVV Survey</a>
             <br>
             <a href="#" data-toggle="modal" data-target="#helpModal">More info</a>
         </div>
