--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
             <ul class="navbar-nav mr-auto"></ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <a class="nav-link text-primary" href="#" data-toggle="modal" data-target="#" disabled>
+                        <i class="fa fa-life-ring"></i>File Types
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link text-warning" href="#" data-toggle="modal" data-target="#helpModal">
                         <i class="fa fa-question"></i>About
                     </a>
