--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link text-primary" href="#" data-toggle="modal" data-target="#" disabled>
-                        <i class="fa fa-life-ring"></i>File Types
+                        <i class="fa fa-graduation-cap"></i>Catalog Types
                     </a>
                 </li>
                 <li class="nav-item">
