--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <ul class="navbar-nav mr-auto"></ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link text-primary" href="#" data-toggle="modal" data-target="#" disabled>
+                    <a class="nav-link text-primary" href="https://github.com/carpyncho/carpyncho-py/tree/master/tutorials/catalogs" target="_new">
                         <i class="fa fa-graduation-cap"></i>Catalog Types
                     </a>
                 </li>
