--- a/index.html
+++ b/index.html
@@ -61,11 +61,21 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container-fluid">
         <!--MAIN-->
-        <div class="lead text-info"><h1>Bulge Tiles</h1></div>
         <main class="row">
-            <div class="col-md-12">
+            <div class="col-md-1"></div>
+            <div class="col-md-2">
+                <div class="lead text-info"><h1>Other catalogs</h1></div>
+                <hr>
+                <h4></h4>
+                <ul id="other-catalogs">
+
+                </ul>
+            </div>
+            <div class="col-md-1"></div>
+            <div class="col-md-7">
+                <div class="lead text-info"><h1>Bulge Tiles</h1></div>
                 <hr>
                 <div class="table-responsive">
                     <table class="table table-bordered ">
@@ -343,7 +353,7 @@
                 <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title text-primary" id="exampleModalLabel">
-                        Download files of <span class="text-info">Tile</span>
+                        Download files of <span class="text-info"></span>
                         <span class="text-info" id="downloadModalTileNameTitle"></span>
                     </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
