--- a/index.html
+++ b/index.html
@@ -341,6 +341,8 @@
             <a href="https://vvvsurvey.org/" target="_new">The VVV Survey</a>
             <br>
             <a href="#" data-toggle="modal" data-target="#helpModal">More info</a>
+            <br>
+            <a href="https://quatrope.github.io/" rel="nofollow"><img src="https://camo.githubusercontent.com/297406b5de767c018660fb691d64719627f6bbab1d53cfb437128a550720f377/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f51756174726f50652d4170706c69636174696f6e732d316335383936" alt="QuatroPe" data-canonical-src="https://img.shields.io/badge/QuatroPe-Applications-1c5896" style="max-width:100%;"></a>
         </div>
     </footer>
 
