--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163601703-1"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
 
-      gtag('config', 'UA-163601703-1');
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-163601703-1');
     </script>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -48,8 +52,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="text-center nav-link text-secondary" href="https://carpyncho-py.readthedocs.io/" target="_new">
-                        <svg width="30px" height="30px" style="display: block; margin: auto;" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="python" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svg-inline--fa fa-python fa-w-14 fa-3x"><path fill="currentColor" d="M439.8 200.5c-7.7-30.9-22.3-54.2-53.4-54.2h-40.1v47.4c0 36.8-31.2 67.8-66.8 67.8H172.7c-29.2 0-53.4 25-53.4 54.3v101.8c0 29 25.2 46 53.4 54.3 33.8 9.9 66.3 11.7 106.8 0 26.9-7.8 53.4-23.5 53.4-54.3v-40.7H226.2v-13.6h160.2c31.1 0 42.6-21.7 53.4-54.2 11.2-33.5 10.7-65.7 0-108.6zM286.2 404c11.1 0 20.1 9.1 20.1 20.3 0 11.3-9 20.4-20.1 20.4-11 0-20.1-9.2-20.1-20.4.1-11.3 9.1-20.3 20.1-20.3zM167.8 248.1h106.8c29.7 0 53.4-24.5 53.4-54.3V91.9c0-29-24.4-50.7-53.4-55.6-35.8-5.9-74.7-5.6-106.8.1-45.2 8-53.4 24.7-53.4 55.6v40.7h106.9v13.6h-147c-31.1 0-58.3 18.7-66.8 54.2-9.8 40.7-10.2 66.1 0 108.6 7.6 31.6 25.7 54.2 56.8 54.2H101v-48.8c0-35.3 30.5-66.4 66.8-66.4zm-6.7-142.6c-11.1 0-20.1-9.1-20.1-20.3.1-11.3 9-20.4 20.1-20.4 11 0 20.1 9.2 20.1 20.4s-9 20.3-20.1 20.3z" class=""></path></svg>
-                        Python Client
+                        <svg width="30px" height="30px" style="display: block; margin: auto;" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="python" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svg-inline--fa fa-python fa-w-14 fa-3x"><path fill="currentColor" d="M439.8 200.5c-7.7-30.9-22.3-54.2-53.4-54.2h-40.1v47.4c0 36.8-31.2 67.8-66.8 67.8H172.7c-29.2 0-53.4 25-53.4 54.3v101.8c0 29 25.2 46 53.4 54.3 33.8 9.9 66.3 11.7 106.8 0 26.9-7.8 53.4-23.5 53.4-54.3v-40.7H226.2v-13.6h160.2c31.1 0 42.6-21.7 53.4-54.2 11.2-33.5 10.7-65.7 0-108.6zM286.2 404c11.1 0 20.1 9.1 20.1 20.3 0 11.3-9 20.4-20.1 20.4-11 0-20.1-9.2-20.1-20.4.1-11.3 9.1-20.3 20.1-20.3zM167.8 248.1h106.8c29.7 0 53.4-24.5 53.4-54.3V91.9c0-29-24.4-50.7-53.4-55.6-35.8-5.9-74.7-5.6-106.8.1-45.2 8-53.4 24.7-53.4 55.6v40.7h106.9v13.6h-147c-31.1 0-58.3 18.7-66.8 54.2-9.8 40.7-10.2 66.1 0 108.6 7.6 31.6 25.7 54.2 56.8 54.2H101v-48.8c0-35.3 30.5-66.4 66.8-66.4zm-6.7-142.6c-11.1 0-20.1-9.1-20.1-20.3.1-11.3 9-20.4 20.1-20.4 11 0 20.1 9.2 20.1 20.4s-9 20.3-20.1 20.3z" class=""></path></svg>                        Python Client
                     </a>
                 </li>
                 <li class="nav-item">
@@ -66,19 +69,23 @@
         <main class="row">
             <div class="col-md-1"></div>
             <div class="col-md-2">
-                <div class="lead text-info"><h1>Other catalogs</h1></div>
+                <div class="lead text-info">
+                    <h1>Other catalogs</h1>
+                </div>
                 <hr>
                 <h4></h4>
                 <ul id="other-catalogs">
                 </ul>
             </div>
             <div class="col-md-8">
-                <div class="lead text-info"><h1>Bulge Tiles</h1></div>
+                <div class="lead text-info">
+                    <h1>Bulge Tiles</h1>
+                </div>
                 <hr>
                 <div class="table-responsive">
                     <table class="table table-bordered ">
                         <tbody>
-                           <tr>
+                            <tr>
                                 <td id="tile-b396" data-tile="b396" class="text-center table-hover">b396</td>
                                 <td id="tile-b395" data-tile="b395" class="text-center table-hover">b395</td>
                                 <td id="tile-b394" data-tile="b394" class="text-center table-hover">b394</td>
@@ -342,7 +349,8 @@
             <br>
             <a href="#" data-toggle="modal" data-target="#helpModal">More info</a>
             <br>
-            <a href="https://quatrope.github.io/" rel="nofollow"><img src="https://camo.githubusercontent.com/297406b5de767c018660fb691d64719627f6bbab1d53cfb437128a550720f377/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f51756174726f50652d4170706c69636174696f6e732d316335383936" alt="QuatroPe" data-canonical-src="https://img.shields.io/badge/QuatroPe-Applications-1c5896" style="max-width:100%;"></a>
+            <a href="https://quatrope.github.io/" rel="nofollow"><img src="https://camo.githubusercontent.com/297406b5de767c018660fb691d64719627f6bbab1d53cfb437128a550720f377/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f51756174726f50652d4170706c69636174696f6e732d316335383936" alt="QuatroPe"
+                    data-canonical-src="https://img.shields.io/badge/QuatroPe-Applications-1c5896" style="max-width:100%;"></a>
         </div>
     </footer>
 
@@ -351,22 +359,22 @@
         <div class="modal fade" id="downloadModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title text-primary" id="exampleModalLabel">
-                        Download files of <span class="text-info"></span>
-                        <span class="text-info" id="downloadModalTileNameTitle"></span>
-                    </h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <div class="modal-header">
+                        <h5 class="modal-title text-primary" id="exampleModalLabel">
+                            Download files of <span class="text-info"></span>
+                            <span class="text-info" id="downloadModalTileNameTitle"></span>
+                        </h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                     </button>
-                </div>
-                <div class="modal-body">
-                    <div id="cite-md"></div>
-                    <ul class="list-group list-group-flush" id="downloadModalLinks"></ul>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" id="close-download-button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
+                    </div>
+                    <div class="modal-body">
+                        <div id="cite-md"></div>
+                        <ul class="list-group list-group-flush" id="downloadModalLinks"></ul>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" id="close-download-button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -374,17 +382,17 @@
         <div class="modal fade" id="changelogModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title text-primary" id="exampleModalLabel">Changes</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <div class="modal-header">
+                        <h5 class="modal-title text-primary" id="exampleModalLabel">Changes</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                     </button>
-                </div>
-                <div class="modal-body md-modal" id="changelog-md">
-                </div>
-                <div class="modal-footer">
-                    <button type="button" id="close-download-button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
+                    </div>
+                    <div class="modal-body md-modal" id="changelog-md">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" id="close-download-button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -392,24 +400,24 @@
         <div class="modal fade" id="helpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title text-primary" id="exampleModalLabel">Carpyncho web client</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <div class="modal-header">
+                        <h5 class="modal-title text-primary" id="exampleModalLabel">Carpyncho web client</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                     </button>
-                </div>
-                <div class="modal-body md-modal" id="help-md">
-                    <div class="float-right">
-                        <a target="_new" class="btn btn-sm btn-secondary" href="https://github.com/carpyncho/carpyncho.github.io/blob/master/README.md">
+                    </div>
+                    <div class="modal-body md-modal" id="help-md">
+                        <div class="float-right">
+                            <a target="_new" class="btn btn-sm btn-secondary" href="https://github.com/carpyncho/carpyncho.github.io/blob/master/README.md">
                             Open in new tab.
                         </a>
 
+                        </div>
+                        <div id="readme-md"></div>
                     </div>
-                    <div id="readme-md"></div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" id="close-download-button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
+                    <div class="modal-footer">
+                        <button type="button" id="close-download-button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
